--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -9,4 +9,27 @@
   font-size: 16px;
   cursor: pointer;
   border-radius: 7px;
+  margin-bottom: 10px;
+}
+
+.Titulo {
+  font-size: 25px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+.Subtitulo {
+  font-size: 17px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.bodyCard {
+  border: 4px solid rgb(0, 0, 0);
+  background-color: #ffffff00;
+  color: #ffffff00;
+  border-radius: 17px;
 }
