--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -27,6 +27,15 @@
   background-color: black;
   color: white;
   width: 13%;
-  border: 1px solid black;
+  border: 1px solid rgb(255, 255, 255);
   text-align: center;
+  cursor: pointer;
+}
+
+.body2 {
+  background-image: url(https://i.pinimg.com/originals/cd/fa/43/cdfa4305cde7963fa700bbf8a221c5aa.png);
+  height: 230vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
 }
