--- a/client/src/components/Paginado/Paginado.css
+++ b/client/src/components/Paginado/Paginado.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.108);
+  background-color: rgb(0, 0, 0);
   width: 50%;
   align-self: center;
   margin-left: 375px;
@@ -15,6 +15,7 @@
   border: none;
   color: white;
   font-size: 22px;
+  cursor: pointer;
 }
 
 .item button:hover {
